Theme- fixing link styling overflow

--- a/css/style.css
+++ b/css/style.css
@@ -6886,6 +6886,7 @@ section time {
 .breadcrumb li:nth-child(2) {
   display: block;
   padding-top: 10px;
+  border-bottom: 0;
   font-family: inherit;
   font-weight: 800;
   line-height: 1.3;
@@ -6921,6 +6922,7 @@ section time {
 .breadcrumb li:nth-child(2) a:hover {
   font-weight: 500;
   color: #9900ff;
+  background-size: 0;
 }
 .breadcrumb li:nth-child(3),
 .breadcrumb li:nth-child(4),
@@ -8126,6 +8128,9 @@ article .field-name-body{
   background: transparent;
   color: #9900ff;
   border: solid;
+}
+article.node-news-item time {
+  margin: 0 72px;
 }
 /**
  * For IE 6/7 only
